--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,10 @@
             <input type="text" id="signupLastname" placeholder="Last Name" required>
             <input type="email" id="signupEmail" placeholder="Email" required>
             <input type="password" id="signupPassword" placeholder="Password" required>
+            <p>Already have an account? <a href="login.html" style=" font-size: 18px; color: blue;">Login</a></p>
             <button type="submit">Sign Up</button>
+            <button type="submit">Sign in with Google</button>
+            
         </form>
     </main>
 
