--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header id="navbar1">
         <nav>
             <h1>My Blog</h1>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
-                <li><a href="account.html" id="accountLink" style="display: none;">Account</a></li>
-                <li><a href="#" id="logoutButton" style="display: none;">Logout</a></li>
+                <li><a href="index.html" id="home">Home</a></li>
+                <li><a href="login.html" id="loginLink">Login</a></li>
+                <li><a href="signup.html" id="signupLink">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <header id="navbar2">
+        <nav>
+            <h1>My Blog</h1>
+            <ul>
+                <li><a href="index.html" id="home">Home</a></li>
+                <li><a href="account.html" id="accountLink">Account</a></li>
+                <li><a href="#" id="logoutButton">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -23,9 +32,9 @@
     <h1 class="heading" style="font-size: 36px; text-align: center; margin-top: 50px;">Welcome to My Blog</h1>
 
     <main>
-        <section id="blogPosts">
+        <div id="blogPosts">
             <!-- Blog posts will be dynamically added here -->
-        </section>
+        </div>
     </main>
 
     <footer>
