--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
             <input type="email" id="loginEmail" placeholder="Email" required>
             <input type="password" id="loginPassword" placeholder="Password" required>
             <button type="submit">Login</button>
+            <button type="submit" style="margin-top: 5px;" id="forgetPassword">Forget Password</button>
         </form>
     </main>
     <div id="errorModal" class="modal">
