--- a/signup.html
+++ b/signup.html
@@ -25,11 +25,11 @@
             <input type="text" id="signupLastname" placeholder="Last Name" required>
             <input type="email" id="signupEmail" placeholder="Email" required>
             <input type="password" id="signupPassword" placeholder="Password" required>
-            <p>Already have an account? <a href="login.html" style=" font-size: 18px; color: blue;">Login</a></p>
+            <p>Already have an account? <a href="login.html" style=" font-size: 15px; color: blue;">Login</a></p>
             <button type="submit">Sign Up</button>
-            <button type="submit">Sign in with Google</button>
-            
+            <button id="googleSignIn">Sign in with Google</button>
         </form>
+        
     </main>
 
     <div id="errorModal" class="modal">
